<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.praneeth.triviaapp.Stats">

    <TextView
        android:text="@string/textView_CorrectAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:id="@+id/textView_CorrectAnswers"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/textView_Performance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textView_Performance"
        android:textColor="@android:color/black"
        android:layout_below="@+id/scrollView_Answers"
        android:layout_alignLeft="@+id/progressBar_CorrectAnswers"
        android:layout_alignStart="@+id/progressBar_CorrectAnswers" />

    <TextView
        android:text="@string/textView_Percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_Percent"
        android:layout_alignTop="@+id/progressBar_CorrectAnswers"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_CorrectAnswers"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/textView_Performance"
        android:layout_alignLeft="@+id/textView_CorrectAnswers"
        android:layout_alignStart="@+id/textView_CorrectAnswers"
        android:layout_toStartOf="@+id/textView_Percent" />

    <Button
        android:text="@string/button_Finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView_Performance"
        android:layout_toEndOf="@+id/textView_Performance"
        android:layout_marginBottom="12dp"
        android:id="@+id/button_Finish" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="12dp"
        android:id="@+id/scrollView_Answers"
        android:layout_below="@+id/textView_CorrectAnswers"
        android:layout_alignRight="@+id/textView_Percent"
        android:layout_alignEnd="@+id/textView_Percent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout_inScrollviewStats">

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Percent"
        android:layout_alignLeft="@+id/progressBar_CorrectAnswers"
        android:layout_alignStart="@+id/progressBar_CorrectAnswers"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:id="@+id/textView_performancePercentage" />

</RelativeLayout>
