<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.praneeth.triviaapp.MainActivity">

    <Button
        android:text="@string/button_Exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/button_Exit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:srcCompat="@android:drawable/checkbox_off_background"
        android:id="@+id/imageView_triviaReady"
        android:layout_alignLeft="@+id/button_Exit"
        android:layout_alignStart="@+id/button_Exit"
        android:layout_alignRight="@+id/Button_StartTrivia"
        android:layout_alignEnd="@+id/Button_StartTrivia"
        android:layout_below="@+id/textView_Welcome" />

    <TextView
        android:text="@string/textView_Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/textView_Welcome"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/Button_StartTrivia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Button_StartTrivia"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"
        android:layout_alignBaseline="@+id/button_Exit"
        android:layout_alignBottom="@+id/button_Exit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_triviaReadymsg"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_below="@+id/imageView_triviaReady"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center" />

</RelativeLayout>
